--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@
 @import url(../../vendor/fonts/fonts.css);
 
 .page {
+  min-width: 320px;
   min-height: 100vh;
   font-family: "Inter", "Arial", sans-serif;
   -moz-osx-font-smoothing: grayscale;
@@ -12,6 +13,9 @@
   text-rendering: optimizeLegibility;
   background-color: rgba(32, 32, 32, 1);
   color: rgba(255, 255, 255, 1);
+}
+
+.page-container {
   max-width: 320px;
   display: flex;
   flex-direction: column;
@@ -21,13 +25,13 @@
 
 
 @media screen and (min-width: 768px) {
-  .page {
+  .page-container {
     max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .page {
+  .page-container {
     max-width: 1280px;
   }
 }
