--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 @import url(../../vendor/normalize.css);
 @import url(../../vendor/fonts/fonts.css);
 
-.page {
+.root {
   min-width: 320px;
   min-height: 100vh;
   font-family: "Inter", "Arial", sans-serif;
@@ -15,7 +15,7 @@
   color: rgba(255, 255, 255, 1);
 }
 
-.page-container {
+.page {
   max-width: 320px;
   display: flex;
   flex-direction: column;
@@ -25,13 +25,13 @@
 
 
 @media screen and (min-width: 768px) {
-  .page-container {
+  .page {
     max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .page-container {
+  .page {
     max-width: 1280px;
   }
 }
