--- a/src/components/WindowWithForm/WindowWithForm.css
+++ b/src/components/WindowWithForm/WindowWithForm.css
@@ -88,7 +88,7 @@
   font-size: 12px;
   line-height: 14.52px;
   cursor: pointer;
-  transition: opacity 0.2 linear;
+  transition: opacity 0.2s linear;
 }
 
 .window__form-submit-btn:hover {
